--- a/style.css
+++ b/style.css
@@ -25,3 +25,13 @@ body{
     cursor: pointer;
 }
 
+#toastBox {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 20px;
+}
