--- a/style.css
+++ b/style.css
@@ -35,3 +35,29 @@ body{
     overflow: hidden;
     padding: 20px;
 }
+
+
+ .toast {
+    width: 400px;
+    height: 80px;
+    background: #f0f0f0; 
+    font-weight: 500;
+    margin: 15px 0;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    display: flex;
+    align-items: center;
+}
+
+.toast i{
+    margin: 0 20px;
+    font-size: 35px;
+    color: green
+}
+
+.toast.error i{
+    color: red;
+}
+
+.toast.invalid i{
+    color: orange;
+}
