--- a/style.css
+++ b/style.css
@@ -46,6 +46,14 @@ body{
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     display: flex;
     align-items: center;
+    position: relative;
+    transform: translateX(100%);
+    animation: moveleft 0.2s linear forwards;
+}
+@keyframes moveleft{
+    100%{
+        transform: translateX(0);
+    }
 }
 
 .toast i{
@@ -60,4 +68,29 @@ body{
 
 .toast.invalid i{
     color: orange;
+}
+
+.toast::after{
+    content:'';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    background: green;
+    animation: animate 4s linear forwards;
+}
+@keyframes animate{
+
+    100%{
+        width: 0;
+    }
+}
+
+.toast.error::after{
+    background: red;
+}
+
+.toast.invalid::after{
+    background: orange;
 }
